# egui-shape-editor

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html
.github/workflows/: static.yml
examples/simple/: Cargo.toml  Trunk.toml  index.html
examples/simple/assets/: manifest.json  sw.js
examples/simple/src/: main.rs
src/: lib.rs  shape_editor.rs
src/shape_editor/: action.rs  canvas.rs  canvas_context_menu.rs  constraints.rs  control_point.rs  grid.rs  index.rs  interaction.rs  memory.rs  rulers.rs  shape_action.rs  shape_params.rs  shape_visitor.rs  snap.rs  style.rs  transform.rs  utils.rs  visitor.rs
src/shape_editor/shape_action/: add_shape_points.rs  insert_shape.rs  move_shape_points.rs  remove_shape_points.rs  replace_shapes.rs
src/shape_editor/shape_visitor/: count_shapes.rs  get_points_positions.rs  get_shape_type_by_point_index.rs  indexed_shape_control_points_visitor.rs  indexed_shapes_visitor.rs  last_shape_point_index.rs
